# pb_cpp_assignment

./: .gitignore  CMakeLists.txt  PButton.qml  PErrorDialog.qml  PFileManager.cpp  PFileManager.h  ReadMe.md  main.cpp  main.qml  qml.qrc  run.sh
compressor/: CMakeLists.txt  bitmap.cpp  bitmap.h  compressor.cpp  compressor.h
images/: test-image-1-gs_packed.barch  test-image-2-gs_packed.barch
